--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ nltk>=3.8.1
 langchain>=0.1.0
 langchain-community>=0.0.10
 langchain-openai>=0.0.2
+langgraph>=0.0.13
 faiss-cpu>=1.7.4
 openai>=1.3.0
 unstructured>=0.10.0
@@ -15,3 +16,5 @@ chardet>=5.0.0
 python-dotenv>=1.0.0
 PyPDF2>=3.0.0
 pdf2image>=1.16.3 
+faiss-cpu>=1.7.4
+langchain>=0.1.0
